fixed spacing between cards

--- a/style.css
+++ b/style.css
@@ -14,12 +14,19 @@ h2 {
   display: inline;
 }
 
+.nav-link {
+  font-size: 15px;
+  letter-spacing: 2px;
+  font-weight: bold;
+}
+
 .container {
   max-width: 1300px;
+  margin-bottom: 100px;
 }
 
 .intro {
-  margin-top: 200px; margin-bottom: 20px;
+  margin-top: 200px; margin-bottom: 200px;
 }
 
 .mit-lincoln-lab {
@@ -58,7 +65,7 @@ h2 {
 
 .showcase {
   height: 420px;
-  margin-top: 100px; margin-bottom: 100px;
+  margin-top: 50px;
   overflow: hidden;
   border: 0;
 }
